// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationProgress renders correctly with all selected 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-4 {
=======
.emotion-6 {
>>>>>>> feat: use colors from theme instead of import
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
=======
.emotion-7 {
>>>>>>> feat: use colors from theme instead of import
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-6 {
=======
.emotion-9 {
>>>>>>> feat: use colors from theme instead of import
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-11 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-7"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-7"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with default props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-4 {
=======
.emotion-6 {
>>>>>>> feat: use colors from theme instead of import
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
=======
.emotion-7 {
>>>>>>> feat: use colors from theme instead of import
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-6 {
=======
.emotion-9 {
>>>>>>> feat: use colors from theme instead of import
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-11 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<<<<<<< HEAD
.emotion-9 {
=======
.emotion-15 {
>>>>>>> feat: use colors from theme instead of import
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-17 {
>>>>>>> feat: use colors from theme instead of import
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-7"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-9"
      >
        <div
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-5"
=======
        class="emotion-15 emotion-5"
      >
        <div
          class="emotion-17 emotion-18"
        />
      </div>
      <div
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
=======
      class="emotion-9 emotion-10"
>>>>>>> feat: use colors from theme instead of import
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-9"
      >
        <div
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-5"
=======
        class="emotion-15 emotion-5"
      >
        <div
          class="emotion-17 emotion-18"
        />
      </div>
      <div
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with selected prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-4 {
=======
.emotion-6 {
>>>>>>> feat: use colors from theme instead of import
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
=======
.emotion-7 {
>>>>>>> feat: use colors from theme instead of import
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-6 {
=======
.emotion-9 {
>>>>>>> feat: use colors from theme instead of import
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-11 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<<<<<<< HEAD
.emotion-14 {
=======
.emotion-22 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<<<<<<< HEAD
.emotion-16 {
=======
.emotion-26 {
>>>>>>> feat: use colors from theme instead of import
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-17 {
=======
.emotion-28 {
>>>>>>> feat: use colors from theme instead of import
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-7"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-14"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-22 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-16"
      >
        <div
          class="emotion-17"
        />
      </div>
      <div
        class="emotion-5"
=======
        class="emotion-26 emotion-5"
      >
        <div
          class="emotion-28 emotion-29"
        />
      </div>
      <div
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 3
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
=======
      class="emotion-9 emotion-10"
>>>>>>> feat: use colors from theme instead of import
    />
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with steps number 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-4 {
=======
.emotion-6 {
>>>>>>> feat: use colors from theme instead of import
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #fff;
}

.emotion-4.emotion-4 {
  color: #fff;
  font-weight: 500;
}

<<<<<<< HEAD
.emotion-5 {
=======
.emotion-7 {
>>>>>>> feat: use colors from theme instead of import
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-6 {
=======
.emotion-9 {
>>>>>>> feat: use colors from theme instead of import
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-11 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<<<<<<< HEAD
.emotion-14 {
=======
.emotion-22 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<<<<<<< HEAD
.emotion-16 {
=======
.emotion-26 {
>>>>>>> feat: use colors from theme instead of import
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-18 {
=======
.emotion-28 {
>>>>>>> feat: use colors from theme instead of import
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.emotion-18.emotion-18 {
  font-weight: 500;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
<<<<<<< HEAD
          class="emotion-3 emotion-4"
=======
          class="emotion-6"
>>>>>>> feat: use colors from theme instead of import
        >
          1
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-7"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
<<<<<<< HEAD
          class="emotion-3 emotion-4"
=======
          class="emotion-6"
>>>>>>> feat: use colors from theme instead of import
        >
          2
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-14"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-22 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-16"
      >
        <div
          class="emotion-3 emotion-18"
          style="color: rgb(220, 225, 235);"
=======
        class="emotion-26 emotion-5"
      >
        <div
          class="emotion-28"
>>>>>>> feat: use colors from theme instead of import
        >
          3
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly without animation 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-4 {
=======
.emotion-6 {
>>>>>>> feat: use colors from theme instead of import
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
=======
.emotion-7 {
>>>>>>> feat: use colors from theme instead of import
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-6 {
=======
.emotion-9 {
>>>>>>> feat: use colors from theme instead of import
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-11 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<<<<<<< HEAD
.emotion-14 {
=======
.emotion-22 {
>>>>>>> feat: use colors from theme instead of import
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
}

<<<<<<< HEAD
.emotion-16 {
=======
.emotion-26 {
>>>>>>> feat: use colors from theme instead of import
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-17 {
=======
.emotion-28 {
>>>>>>> feat: use colors from theme instead of import
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-7"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-3 emotion-4"
=======
          class="sc-ui-icon emotion-6"
>>>>>>> feat: use colors from theme instead of import
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-5"
=======
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-6"
    >
      <div
        class="emotion-14"
=======
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-22 emotion-12"
>>>>>>> feat: use colors from theme instead of import
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-16"
      >
        <div
          class="emotion-17"
        />
      </div>
      <div
        class="emotion-5"
=======
        class="emotion-26 emotion-5"
      >
        <div
          class="emotion-28 emotion-29"
        />
      </div>
      <div
        class="emotion-7 emotion-8"
>>>>>>> feat: use colors from theme instead of import
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
